# integration_project_ecn

./: LICENSE  README.md  arm.launch  groupes.csv
build-integ_command-Imported_Kit-Debug/: CMakeCache.txt  CMakeCache.txt.prev  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  qtcsettings.cmake
build-integ_command-Imported_Kit-Debug/ament_cmake_core/: integ_commandConfig.cmake  package.cmake
build-integ_command-Imported_Kit-Debug/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
build-integ_command-Imported_Kit-Debug/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
build-integ_description-Imported_Kit-Debug/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-integ_description-Imported_Kit-Debug/ament_cmake_core/: integ_descriptionConfig.cmake  package.cmake
build-integ_description-Imported_Kit-Debug/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
build-integ_description-Imported_Kit-Debug/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
gkd_models/: CMakeLists.txt
gkd_models/msg/: dyn_mats.msg
gkd_models/scripts/: Dynamic_indirect.py
gkd_models/srv/: MGI.srv
image_bag/rosbag2_2024_02_21-09_32_18/: metadata.yaml
image_processing/: CMakeLists.txt  setup.py
image_processing/src/: center_circle_detector.cpp  color_detector.cpp  mass_center_detector.cpp  moving_target.cpp
integ_command/: CMakeLists.txt  CMakeLists.txt.autosave  ReadMe.txt  package.xml
integ_command/launch/: CTC_manual.yaml  computed_torque_launch.py
integ_command/src/: integ_CTC.cpp  test.cpp
integ_description/: CMakeLists.txt  package.xml
integ_description/config/: joint_names_scara_sw.yaml
integ_description/launch/: all_launch.py  config.rviz  display.launch  gazebo.launch  position_manual.yaml  sim.sh  state_publisher_launch.py  target_launch.py  upload_launch.py  velocity_manual.yaml  world_launch.py  world_scara_target_launch.py
integ_description/log/: latest_build
integ_description/meshes/: base_link.STL  boule_noel.dae  link_2.STL
integ_description/params/: arm_control.yaml
integ_description/src/: integ_CTC.cpp
integ_description/urdf/: boule_noel.xacro  camera.xacro  scara_sw.urdf  scara_sw.xacro  scara_sw_identification.urdf  target.xacro  world.sdf
integ_gazebo_model/integ_description/: CMakeLists.txt  README.md  package.xml
integ_gazebo_model/integ_gazebo/: CMakeLists.txt  package.xml
integ_gkd_models/: CMakeLists.txt  package.xml
integ_gkd_models/fct/: gkd_fct.cpp  gkd_fct.h
integ_gkd_models/scripts/: Dynamic.py  Dynamic_indirect.py  Kinematic.py  MGD.py  MGI.py  RobotParam.yml  gkd.py
integ_gkd_models/src/: Test_clientDynamic  Test_clientKinematic  Test_clientMGD  Test_clientMGI
integ_gkd_models/srv/: Dynamic.srv  Dynamic_indirect.srv  Kinematic.srv  MGD.srv
integ_gkd_models_fct/: CMakeLists.txt  package.xml
integ_gkd_models_fct/msg/: dyn_mats.msg
integ_gkd_models_fct/src/: gkd_fct.cpp
integ_identification_deep/: data_generation.py  input_data.bag  pre_processing.py  test_pytorch.py  train.py
integ_identification_deep/dataset/: 0.116-0.161-1.21-0.786-0.143-0.428.bag  0.127-0.141-0.987-1.934-0.381-0.308.bag  0.136-0.667-0.97-1.499-0.375-0.132.bag  0.139-0.718-1.325-0.511-0.781-0.423.bag  0.148-0.182-1.134-0.62-0.493-0.532.bag  0.161-0.438-1.968-1.804-0.288-0.116.bag  0.164-0.615-0.894-1.99-0.356-0.548.bag  0.166-0.529-1.289-1.197-0.557-0.202.bag  0.166-0.638-1.41-1.027-0.567-0.137.bag  (+180 more)
integ_image_processing/image_processing/: CMakeLists.txt  package.xml
integ_image_processing/image_processing/examples/: center_circle_detector.cpp  mass_center_detector.cpp
integ_image_processing/image_processing/include/ecn_common/: color_detector.h
integ_image_processing/image_processing/src/: color_detector.cpp
integ_indentif/: fifthorder.mat
integ_msgs/: CMakeLists.txt  package.xml
integ_msgs/msg/: CenterAndArea.msg
integ_msgs/srv/: SrvTrajec.srv
integ_reference_command/: CMakeLists.txt  package.xml
integ_reference_command/include/: calc.h
integ_reference_command/src/: calc.cpp  main.cpp  main.cpp.autosave  simulation_trajectory.cpp  simulation_trajectory.cpp.autosave
integ_trajec/: CMakeLists.txt  package.xml
integ_trajec/include/: polynomial_interpolator.h  sinus_interpolator.h  spline.h
integ_trajec/launch/: trajec_manual.yaml  trajectory_launch.py
integ_trajec/log/: latest_build
integ_trajec/planner_trajec/: CMakeLists.txt  package.xml
integ_trajec/planner_trajec/src/: generation_trajec.cpp
integ_trajec/src/: generation_trajec.cpp  goal_pose.cpp  polynomial_interpolator.cpp  trajectory_generation_client.cpp  trajectory_generation_service.cpp
integ_trajectory_generation/: CMakeLists.txt  package.xml
integ_trajectory_generation/include/integ_trajectory_generation/: generation_node.h
integ_trajectory_generation/launch/: generation_launch.launch  generation_launch.py  slider_launch.py
integ_trajectory_generation/src/: generation_main.cpp  generation_node.cpp  main.cpp  topics.py  utils.cpp
integ_trajectory_tracking/: CMakeLists.txt  package.xml
integ_trajectory_tracking_HT/: CMakeLists.txt  package.xml
integ_trajectory_tracking_HT/src/: CTC_controller.cpp  PID_controller.cpp
integ_vision/src/visual_servoing/: CMakeLists.txt  package.xml  setup.cfg  setup.py
integ_vision/src/visual_servoing/visual_servoing/: FeatureDetector  FeatureDetector.py  cirlcleDetector  draft_tracker  tracker  tracker.py  tracker2.py
log/: latest_build
pid/: CMakeLists.txt  package.xml  setup.py
pid/config/: param.yaml
pid/launch/: pid_node.launch.py
pid/msg/: PIDcommand.msg
pid/src/: pid_node.py
src/integ_description/: package.xml
src/integ_description/launch/: effort_manual.yaml  state_publisher_launch.py  target_launch.py  velocity_manual.yaml  world_launch.py
src/integ_description/urdf/: scara_sw.xacro  scara_sw_identification.urdf  world.sdf
target_trajectories/: CMakeLists.txt  package.xml
trajectory_tracking/: CMakeLists.txt  package.xml
(+164 files in other folders)
