<?xml version="1.0"?>
<package format="2">
  <name>reference_command</name>
  <version>0.0.1</version>
  <description>The reference_command package</description>

  <maintainer email="none@none.com">None</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ecn_common</depend>
  <depend>image_transport</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
