<?xml version="1.0"?>
<package>
  <name>integ_trajectory_tracking_HT</name>
  <version>0.0.1</version>
  <description>
    Trajectory tracking for INTEG project at Ecole Centrale de Nantes.
  </description>

  <maintainer email="thomas.calmettes@eleves.ec-nantes.fr"> Thomas Calmettes </maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>

</package>
