<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pid</name>
  <version>0.0.0</version>
  <description>integ_command handles a Computed Torque Control node designed for INTEG project for Centrale Nantes Robotics</description>
  <maintainer email="tl.leblanc@outlook.fr">Thibault</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>baxter_core_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>std_msgs</depend>
  <depend>rospy</depend>
  <depend>Eigen</depend>
 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
