<?xml version="1.0"?>
<package format="2">
  <name>image_processing</name>
  <version>0.0.0</version>
  <description>The image processing package</description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>cv_bridge</depend>
    <depend>roscpp</depend>
    <depend>image_transport</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>rospy</depend>
    <depend>sensor_msgs</depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
