<package format="2">
  <name>integ_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for scara_sw</p>
    <p>This package contains configuration data, 3D models and launch files
for scara_sw robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
       <build_type>ament_cmake</build_type>
  </export>

</package>
